--- a/scripts/02-Methylation_statistics.Rmd
+++ b/scripts/02-Methylation_statistics.Rmd
@@ -13,4 +13,408 @@ editor_options:
   chunk_output_type: inline
 ---
 
-# Differentially Methylated Genes 
+# Differentially Methylated Genes Statistics 
+
+### Load libraries 
+
+```{r, message=FALSE, warning=FALSE}
+
+# BiocManager::install("goseq")
+
+library(plyr)
+library(dplyr)
+library(ggplot2)
+library(tidyverse)
+library(readxl)
+library(plotrix) 
+library(gridExtra)
+library(seacarb) 
+library(pheatmap)
+library(tidyr)
+library(gplots)
+library(cowplot)
+library(lsmeans)
+library(data.table)
+library(RColorBrewer)
+library(randomcoloR)
+#library(GSEABase)
+library(ggpubr)
+library(hrbrthemes)
+library(viridis)
+library(factoextra)
+#library(ropls)
+#library(mixOmics)
+library(vegan)
+library(Rmisc)
+```
+
+### Load data 
+
+```{r}
+## read in if skipping code above 
+meth_table5x_filtered2 <- read.csv("data/WGBS/meth_table5x_filtered2.csv")  
+meth_table5x_filtered2_sigDMG <- read.csv("data/WGBS/meth_table5x_filtered2_sigDMG.csv") 
+```
+
+
+### Calculating median loci methylation % per gene per sample for all DMGs 
+
+```{r}
+## Median from the filtered2 above
+gene.stats <- meth_table5x_filtered2 %>%
+  dplyr::group_by(Sample.ID, gene) %>%
+  mutate(median.gene = median(per.meth),
+         mean.gene = mean(per.meth)) %>% ungroup() %>%
+  dplyr::group_by(Sample.ID) %>%
+  mutate(median.sample = median(median.gene),
+         mean.sample = mean(mean.gene)) %>% ungroup()
+
+#gene.stats %>% dplyr::select(gene) %>% distinct()
+
+gene.stats.DMGs <- meth_table5x_filtered2_sigDMG %>%
+  dplyr::group_by(Sample.ID, gene) %>%
+  mutate(median.gene = median(per.meth, na.rm=TRUE),
+         mean.gene = mean(per.meth)) %>% ungroup() %>%
+  dplyr::group_by(Sample.ID) %>%
+  mutate(median.sample = median(median.gene),
+         mean.sample = mean(mean.gene)) %>% ungroup()
+  
+## plot 
+gene.stats.DMGs %>% 
+    #select(Sample.ID, meth_exp_group, gene, median.gene, mean.gene) %>% distinct() %>%
+    dplyr::select(Sample.ID, meth_exp_group, median.sample, mean.sample) %>% distinct() %>%
+    ggplot(., aes(x=meth_exp_group, y=mean.sample, color=meth_exp_group)) + 
+    geom_boxplot() +
+    geom_jitter(alpha=0.5, width = 0.25) + 
+    theme_bw() + ylab("Mean CpG loci % methylation per gene") +
+    #facet_wrap(~gene_status, scales = "free_y") + 
+    scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
+    theme(strip.text.x = element_text(size = 12, color = "black", face = "bold"),
+          strip.text.y = element_text(size = 12, color = "black", face = "bold")) +
+    theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
+```
+
+Statistics on the above 
+
+1225 
+2197
+
+```{r}
+gene.stats.df <- gene.stats.DMGs %>% 
+  dplyr::select(Sample.ID, meth_exp_group, median.sample, mean.sample) %>% distinct()
+  
+aov <- aov(mean.sample ~ meth_exp_group, data=gene.stats.df)
+summary(aov)
+TukeyHSD(aov)
+```
+
+
+# Plotting heatmap of DMGs with inidividual variability 
+
+`ploidy.meth.means.sigDMG` = significant DMGs. Mean CpG loci % methylation per gene per sample. 
+
+```{r}
+## use for per sample heatmap 
+heatmap.sample.df <- gene.stats %>% filter(!Sample.ID == "1225") %>% filter(!Sample.ID == "2197") %>%
+    dplyr::select(Sample.ID, meth_exp_group, gene, mean.gene) %>% distinct() 
+
+heatmap.sample.DMG.df <- gene.stats.DMGs %>% filter(!Sample.ID == "1225") %>% filter(!Sample.ID == "2197") %>%
+    dplyr::select(Sample.ID, gene, meth_exp_group, mean.gene) %>% distinct() 
+
+## use for ploidy group heatmap 
+heatmap.group.df <- heatmap.sample.df %>% group_by(gene, meth_exp_group) %>%
+  mutate(mean.group = mean(mean.gene)) %>% ungroup() %>% dplyr::select(-Sample.ID, -mean.gene) %>% distinct()
+
+heatmap.group.DMG.df <- heatmap.sample.DMG.df %>% group_by(gene, meth_exp_group) %>%
+  mutate(mean.group = mean(mean.gene)) %>% ungroup() %>% dplyr::select(-Sample.ID, -mean.gene) %>% distinct()
+
+heatmap.sample.DMG.df %>% subset(meth_exp_group == "D") %>% dplyr::select(Sample.ID) %>% distinct()
+```
+
+
+```{r}
+library("ComplexHeatmap")
+
+All_data <- heatmap.sample.DMG.df %>% dplyr::select(-meth_exp_group) %>%
+  #pivot_wider(names_from = c(meth_exp_group), values_from = mean.group)
+  pivot_wider(names_from = c(Sample.ID), values_from = mean.gene)
+All_mat <- as.matrix(All_data[,-1]) #create matrix and remove gene name 
+group_order<-c("D", "T1", "T2")
+
+pdf("data/WGBS/output/figures/Heatmap_samples_DMG.pdf")
+#heatmap_df<-heatmap.2(All_mat, 
+heatmap.2(All_mat, 
+          cexCol = 1.5, 
+          distfun = function(x) as.dist(1 - cor(t(x), use = "pa")), 
+          hclustfun = function(x) hclust(x,method = 'average'),
+          key.xtickfun = function() {
+  breaks = pretty(parent.frame()$breaks)
+  breaks = breaks[c(1,length(breaks))]
+  list(at = parent.frame()$scale01(breaks),labels = breaks)},
+  Colv=TRUE, 
+  col= rev(RColorBrewer::brewer.pal(name = "RdYlBu", n = 10)), 
+  density.info = "none", 
+  #ColSideColors=col_labels,
+  #colCol = col_labels,
+  trace = "none", 
+  scale = "row", 
+  labRow = FALSE,
+  labCol = FALSE,
+  sepcolor="none",
+  sepwidth=c(0.1,0.01),
+  lmat = rbind(c(0,3),c(2,1),c(4,0)), keysize=1, key.par = list(cex=0.65), lhei=c(1.5,4,1), lwid = c(1.5,4))
+dev.off()
+```
+
+```{r}
+zscore_df <- as.data.frame(heatmap_df$carpet) ##carpet score is the zscore that goes into the heatmap
+## but the above df is not ordered by dendrogram like the heatmap is
+
+##sample order of heatmap 
+colInd_df <- as.data.frame(heatmap_df$colInd)
+sample_order <- All_data %>% select(-gene) %>%
+  gather(., "Sample.ID", "value", 1:51) %>% select(-value) %>% distinct()
+sample_order$`heatmap_df$colInd` <- c(1:51)
+colInd_df <- left_join(colInd_df, sample_order, by="heatmap_df$colInd") 
+sample_ploidyinfo <- gene.stats %>% select(Sample.ID, meth_exp_group) %>% distinct()
+sample_ploidyinfo$Sample.ID <- as.character(sample_ploidyinfo$Sample.ID)
+colInd_df <- left_join(colInd_df, sample_ploidyinfo, by = "Sample.ID")
+
+# saving gene row ids to match to name and z score above 
+rowInd_df <- as.data.frame(heatmap_df$rowInd)
+rowInd_df$gene <- c(1:1447)
+rowInd_df$gene <- paste0("V", rowInd_df$gene)
+
+## testing z score output to double check order of the gene names above 
+## number below is the first row under rowInd above
+test <- All_data[1145,] 
+test <- test %>% gather("Sample.ID", "value", 2:4) %>% na.omit() ##2:4 for meth_exp_group
+test <- test %>% mutate(mean = mean(value),
+                        stdev = sd(value),
+                        zscore = (value-mean)/stdev)
+## confirmed that V1 is the first row of rowInd_df which is row 642 in All_data  
+## next steps is to bind rowInd_df with the row id and then the gene name from All_data
+All_data_gene_names <- All_data 
+All_data_gene_names$rowInd <- c(1:1447)
+#All_data_gene_names$rowInd <- as.character(All_data_gene_names$rowInd)
+
+zscore_modified <- zscore_df %>% 
+  rownames_to_column(., var = "meth_exp_group") %>% na.omit() %>%
+  gather("gene", "zscore", 2:1448) %>%
+  left_join(., rowInd_df, by = "gene") %>%
+  dplyr::rename(., rowInd = `heatmap_df$rowInd`) %>%
+  left_join(., All_data_gene_names, by = ("rowInd")) %>% #select(-c(6:58)) %>%
+  dplyr::rename(., gene_number = gene.x) %>%
+  dplyr::rename(., gene = gene.y) %>% #left_join(., ploidyinfo, by=c("Sample.ID")) %>%
+  # mutate(meth_exp_group = case_when(
+  #   group == "Group1" ~ "T1",
+  #   group == "Group2" ~ "T1",
+  #   group == "Group3" ~ "T2",
+  #   group == "Group4" ~ "T2",
+  #   group == "Group5" ~ "D",
+  #   group == "Group6" ~ "D"
+  # )) %>%
+  dplyr::rename(meth_D = D) %>%
+  dplyr::rename(meth_T1 = T1) %>%
+  dplyr::rename(meth_T2 = T2) %>%
+  spread(meth_exp_group, zscore)
+zscore_modified$rowInd <- as.character(zscore_modified$rowInd)
+## now I can subset to the conditions I want 
+
+# Genes that are hypermethylated in Triploidy 2 (and not in Triploidy 1 or Diploidy) = 122 genes
+hypermeth_trip2 <- zscore_modified %>% filter(T2 > 1) 
+# Genes that are hypermethylated in Triploidy 1 (and not in Triploidy 2 or Diploidy)  = 138 genes
+hypermeth_trip1 <- zscore_modified %>% filter(T1 > 1) 
+# Genes that are hypermethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 460 genes
+hypermeth_dip <- zscore_modified %>% filter(D > 1) 
+
+hypermeth_trip2 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
+hypermeth_trip1 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
+hypermeth_dip %>% write.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
+
+hypermeth_trip2 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
+hypermeth_trip1 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
+hypermeth_dip <- read.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
+```
+
+Plotting the hypermeth levels above 
+
+```{r}
+#hypermeth_trip2_plot <- hypermeth_trip2 %>% 
+#hypermeth_trip1_plot <- hypermeth_trip1 %>% 
+hypermeth_dip_plot <- hypermeth_dip %>% 
+  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
+  gather("meth_exp_group", "per.meth", 2:4) %>%
+    # mutate(loci_status = case_when(
+    #       per.meth <= 10 ~ "unmethylated",
+    #       per.meth > 10 & per.meth < 50 ~ "sparsely methylated",
+    #       per.meth >= 50 ~ "methylated")) %>%
+  ggplot(., aes(x=meth_exp_group, y=per.meth, color=meth_exp_group)) + theme_bw() + xlab("") +
+  geom_boxplot() + geom_jitter(size=1, alpha=0.3, width=0.2) + 
+  #facet_wrap(~loci_status, scales = "free_y") +
+  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
+  theme(strip.text.x = element_text(size = 10, color = "black", face = "bold"),
+        strip.text.y = element_text(size = 10, color = "black", face = "bold")) +
+  theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
+
+ggsave(filename="data/WGBS/output/figures/hypermeth_dip.jpeg", 
+       plot=hypermeth_dip_plot, dpi=300, width=4, height=3, units="in")
+
+## statistics on the above 
+hypermeth_stats <- hypermeth_trip2 %>% 
+  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
+  gather("meth_exp_group", "per.meth", 2:4)
+
+aov <- aov(per.meth ~ meth_exp_group, data=hypermeth_stats)
+summary(aov)
+TukeyHSD(aov)
+```
+
+
+# Principal Components Analysis & PERMANOVA 
+
+## ALL 
+
+## Creating matrix table
+
+```{r}
+## Create summary means for all genes with at least 5 methylated positions
+pca.means.df <- aggregate(per.meth ~ gene*Sample.ID, data=meth_table5x_filtered, FUN=mean)
+pca.means.df2 <- pca.means.df[pca.means.df$gene %in% DMG_5x_sig$gene,]
+
+# transform df so column names are gene names 
+All_data2 <- pca.means.df %>% 
+  pivot_wider(names_from = gene, values_from = per.meth) %>%
+  na.omit()
+
+rownames(All_data2) <- paste0(All_data2$Sample.ID)
+```
+
+## Running prcomp function 
+
+```{r}
+scaled_pca_all <-prcomp(All_data2[c(2:ncol(All_data2))], scale=FALSE, center=TRUE)
+fviz_eig(scaled_pca_all)
+
+coral_info <- All_data2[c(1)]
+
+pca_data_all <- scaled_pca_all%>%
+  broom::augment(coral_info)%>%
+  group_by(Sample.ID)%>%
+  mutate(PC1.mean = mean(.fittedPC1),
+         PC2.mean = mean(.fittedPC2))
+```
+
+## Examine PERMANOVA results.
+
+```{r}
+# scale data
+vegan_all <- scale(All_data2[c(2:ncol(All_data2))])
+
+# PERMANOVA 
+permanova_all <- adonis2(vegan_all ~ group*ploidy, 
+                         data = pca_data_all, method='eu', permutations = 9999)
+capture.output(permanova_all, file = "data/WGBS/output/statistics/ploidy_PERMANOVA_all.txt")
+```
+
+## Assemble plot with background points
+
+```{r}
+#adding percentages on axis
+names(pca_data_all)[3] <- "PCA1"
+names(pca_data_all)[4] <- "PCA2"
+names(pca_data_all)[5] <- "PCA3"
+names(pca_data_all)[6] <- "PCA4"
+percentage_all <- round((scaled_pca_all$sdev^2) / sum((scaled_pca_all$sdev^2)) * 100, 2)
+percentage_all <- paste(colnames(pca_data_all[3:55]), "(",paste(as.character(percentage_all), "%", ")", sep="") )
+
+## adding treatment column to visualize 
+pca_data_all$Sample.ID <- as.character(pca_data_all$Sample.ID)
+pca_data_all <- left_join(pca_data_all, ploidyinfo, by = c("Sample.ID")) %>%
+  left_join(., meta, by = c("Sample.ID", "ploidy", "group", "treesplit", "Clade")) %>%
+  #subset(!group == "Group7" & !group == "Ungroup") %>%
+  mutate(meth_exp_group = case_when(
+    group == "Group1" ~ "T1",
+    group == "Group2" ~ "T1",
+    group == "Group3" ~ "T2",
+    group == "Group4" ~ "T2",
+    group == "Group5" ~ "D",
+    group == "Group6" ~ "D",
+    group == "Group7" ~ "ungroup",
+    group == "Ungroup" ~ "ungroup"
+  ))
+
+PCA_plot <- ggplot(pca_data_all, aes(PCA1, PCA2, color=meth_exp_group)) + #, label=Sample.ID
+  geom_point(size = 4, aes(shape = ploidy)) +
+  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen", "pink3")) + #;  "darkgreen"
+  #scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) +
+  scale_shape_manual(values=c(21, 17)) +
+  theme_classic()+
+  #geom_label() +
+  ylab(percentage_all[2])+
+  xlab(percentage_all[1])+
+  #labs(color = "Group", shape = "Ploidy") + 
+  #labs(color = "Treatment", shape = "Timepoint") +
+  theme(legend.text = element_text(size=18), 
+        legend.position="right",
+        plot.background = element_blank(),
+        legend.title = element_text(size=20), 
+        plot.margin = margin(1, 1, 1, 1, "cm"),
+        axis.text = element_text(size=18), 
+        title = element_text(size=25, face="bold"), 
+        axis.title = element_text(size=18))
+
+ggsave(filename="data/WGBS/output/figures/PCA_all_group_PerMeth.jpeg", plot=PCA_plot, dpi=300, width=9, height=7.5, units="in")
+```
+
+Plot meth percent for Figure 2. 
+
+```{r}
+## make sure above pca.means.df is run only for the entire dataset not the significant genes 
+#pca.means.df.env <- aggregate(per.meth ~ Sample.ID, data=pca.means.df, FUN=mean)
+pca.means.df.env <- summarySE(pca.means.df, measurevar = c("per.meth"), groupvars = c("Sample.ID"))
+pca.means.df.env$Sample.ID <- as.character(pca.means.df.env$Sample.ID)
+pca.means.df.env <- left_join(pca.means.df.env, meta, by = c("Sample.ID"))
+
+pca.means.df.env.plot <- pca.means.df.env %>%
+  filter(!is.na(ploidy)) %>%
+  ggplot(., aes(x=Timepoint, y=per.meth, color=Treatment, shape=ploidy)) + #, label=Sample.ID
+  geom_jitter(size=2.5, width=0.3) + scale_shape_manual(values=c(21, 17)) + #geom_label() +
+  ylab("CpG % methylation") +
+  # geom_errorbar(aes(ymin=per.meth-se, ymax=per.meth+se), 
+  #               linewidth=0.5, width=.075, position=position_dodge(),
+  #               linetype = "dotted") +
+  theme_bw() + scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) 
+## 1225 pink top; 2197 blue top 
+
+ggsave(filename="data/WGBS/output/figures/env_permeth_all.jpeg", plot=pca.means.df.env.plot, dpi=300, width=6, height=5, units="in")
+
+pca.means.df.env2 <- left_join(pca.means.df, meta, by=c("Sample.ID"))
+pca.means.df.env2 <- summarySE(pca.means.df.env2, measurevar = c("per.meth"), groupvars = c("Treatment", "Timepoint"))
+
+pca.means.df.env.plot2 <- pca.means.df.env2 %>%
+  filter(!is.na(Treatment)) %>%
+  ggplot(., aes(x=Timepoint, y=per.meth, color=Treatment, group=Treatment)) + 
+  geom_point(size=2.5) + geom_line() +
+  ylab("CpG % methylation") +
+  geom_errorbar(aes(ymin=per.meth-se, ymax=per.meth+se),linewidth=0.5, width=.075) +
+  theme_bw() + scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) 
+
+ggsave(filename="data/WGBS/output/figures/env_permeth_all2.jpeg", plot=pca.means.df.env.plot2, dpi=300, width=6, height=5, units="in")
+
+stats3 <- lm(per.meth ~ Timepoint*Temperature*CO2, 
+               na.action=na.omit, data=pca.means.df.env)
+
+qqPlot(residuals(stats3)) 
+hist(residuals(stats3))
+
+t1 <- aov(per.meth ~ Timepoint*Temperature*CO2, 
+               na.action=na.omit, data=pca.means.df.env)
+
+stats3.anova <- Anova(stats3, ddf="lme4", type='III')
+
+library(multcomp)
+emmeans(stats3, pairwise ~ Timepoint*Temperature*CO2)
+```
+
+
