--- a/scripts/01-DMG.Rmd
+++ b/scripts/01-DMG.Rmd
@@ -112,6 +112,7 @@ ploidyinfo <- read.delim2("data/metadata/samples_Pacuta.annotations.txt",
   left_join(., pacuta_clade, by="Sample.ID")
 
 meta <- dplyr::left_join(meta, ploidyinfo, by="Sample.ID")
+save(meta, file = "data/metadata/meta.RData")
 ```
 
 ### Merge dataframes together
@@ -237,7 +238,6 @@ DMG_5x_sig %>% write.csv("data/WGBS/DMG_5x_sig_methgroup.csv")
 - `results5x / results10x` = output from glm model; contains gene names, pvalues and adjusted pvalues for differentially methylated  
 - `DMG_5x_sig / DMG_5x_sig` = only adjusted pvalues from the results 5 and 10x dfs 
 
-### Adding "loci status" to each loci as a category and filtering to only significant DMGs 
 
 ```{r}
 meth_table5x_filtered <- meth_table5x_filtered %>% 
@@ -322,6 +322,8 @@ meth_table5x_filtered %>% filter(position == "3396")
 meth_table5x_filtered2_sigDMG <- meth_table5x_filtered2[meth_table5x_filtered2$gene %in% DMG_5x_sig$gene,]
 length(unique(meth_table5x_filtered2_sigDMG$gene)) ##1,447 genes left 
 
+save(meth_table5x_filtered_sigDMG, file = "data/WGBS/meth_table5x_filtered_sigDMG.RData")
+save(meth_table5x_filtered, file = "data/WGBS/meth_table5x_filtered.RData")
 save(meth_table5x_filtered2, file = "data/WGBS/meth_table5x_filtered2.RData")
 save(meth_table5x_filtered2_sigDMG, file = "data/WGBS/meth_table5x_filtered2_sigDMG.RData")
 ```
