--- a/scripts/02-Methylation_statistics.Rmd
+++ b/scripts/02-Methylation_statistics.Rmd
@@ -37,27 +37,40 @@ library(lsmeans)
 library(data.table)
 library(RColorBrewer)
 library(randomcoloR)
-#library(GSEABase)
 library(ggpubr)
 library(hrbrthemes)
 library(viridis)
 library(factoextra)
-#library(ropls)
-#library(mixOmics)
 library(vegan)
 library(Rmisc)
+library(ggsignif)
+library(ggpubr)
+library(cowplot)
+library("ComplexHeatmap")
 ```
 
-### Load data 
+## Load data 
 
 ```{r}
-## read in if skipping code above 
+## filtered df has all loci 
+load("data/WGBS/meth_table5x_filtered.RData")
+load("data/WGBS/meth_table5x_filtered_sigDMG.RData")
+
+## filtered2 = loci that have median methylation > 10%
 load("data/WGBS/meth_table5x_filtered2.RData")  
 load("data/WGBS/meth_table5x_filtered2_sigDMG.RData") 
+
+## meta
+load("data/metadata/meta.RData")
+
+meth_group_list <- meth_table5x_filtered2 %>% dplyr::select(Sample.ID, meth_exp_group) %>% distinct()
 ```
 
 
-### Calculating median loci methylation % per gene per sample for all DMGs 
+## Calculating median loci methylation % per gene per sample
+
+Done with loci > 10% median methylation
+Figure made with DMGs 
 
 ```{r}
 ## Median from the filtered2 above
@@ -79,19 +92,32 @@ gene.stats.DMGs <- meth_table5x_filtered2_sigDMG %>%
   mutate(median.sample = median(median.gene),
          mean.sample = mean(mean.gene)) %>% ungroup()
   
-## plot 
-gene.stats.DMGs %>% 
-    #select(Sample.ID, meth_exp_group, gene, median.gene, mean.gene) %>% distinct() %>%
+fig2C <- gene.stats.DMGs %>% 
+  subset(!meth_exp_group == "ungroup") %>%
     dplyr::select(Sample.ID, meth_exp_group, median.sample, mean.sample) %>% distinct() %>%
     ggplot(., aes(x=meth_exp_group, y=mean.sample, color=meth_exp_group)) + 
-    geom_boxplot() +
-    geom_jitter(alpha=0.5, width = 0.25) + 
-    theme_bw() + ylab("Mean CpG loci % methylation per gene") +
-    #facet_wrap(~gene_status, scales = "free_y") + 
+    geom_boxplot(outlier.shape=NA) +
+    geom_jitter(size=3, alpha=0.7, width = 0.25) + 
+    theme_bw() + 
+    geom_signif(comparisons = list(c("D", "T1"), c("T1", "T2"), c("D","T2")), 
+                annotations = "***", 
+                y_position = c(65,61,67),
+                color="grey30", 
+                size = 0.5) + ## size = linewidth()
+    ylab("CpG methylation level (%)") +
+    #xlab("Ploidy Group") +
+    xlab("") +
+    labs(color = "Group") +
     scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
-    theme(strip.text.x = element_text(size = 12, color = "black", face = "bold"),
-          strip.text.y = element_text(size = 12, color = "black", face = "bold")) +
-    theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
+    scale_y_continuous(expand=expansion(mult=c(0.15,0.17))) +
+    #annotate(geom = "text", x=0.5, y=0.9, label = "p < 0.0001", size=8, color="grey45") +
+    theme(axis.text.x = element_text(size = 12, color = "black"),
+          axis.text.y = element_text(size = 12, color = "black"),
+          strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"),
+          legend.position = "right",
+          legend.text = element_text(size=12),
+          axis.title.x = element_text(margin = margin(t=10,r=0,b=0,l=0), size=12, face="bold"),
+          axis.title.y = element_text(margin = margin(t=0,r=10,b=0,l=0), size=12, face="bold"))
 ```
 
 Statistics on the above 
@@ -109,7 +135,7 @@ TukeyHSD(aov)
 ```
 
 
-# Plotting heatmap of DMGs with inidividual variability 
+## Plotting heatmap of DMGs with inidividual variability 
 
 `ploidy.meth.means.sigDMG` = significant DMGs. Mean CpG loci % methylation per gene per sample. 
 
@@ -133,17 +159,27 @@ heatmap.sample.DMG.df %>% subset(meth_exp_group == "D") %>% dplyr::select(Sample
 
 
 ```{r}
-library("ComplexHeatmap")
-
 All_data <- heatmap.sample.DMG.df %>% dplyr::select(-meth_exp_group) %>%
   #pivot_wider(names_from = c(meth_exp_group), values_from = mean.group)
   pivot_wider(names_from = c(Sample.ID), values_from = mean.gene)
 All_mat <- as.matrix(All_data[,-1]) #create matrix and remove gene name 
 group_order<-c("D", "T1", "T2")
 
-pdf("data/WGBS/output/figures/Heatmap_samples_DMG.pdf")
-#heatmap_df<-heatmap.2(All_mat, 
-heatmap.2(All_mat, 
+par("mar")
+par(mar=c(1,1,1,1))
+
+col_labels_df <- heatmap.sample.DMG.df %>% dplyr::select(Sample.ID, meth_exp_group) %>% distinct() %>%
+  column_to_rownames(., var = "Sample.ID") %>%
+  mutate(color = case_when(
+    meth_exp_group == "D" ~ "skyblue3",
+    meth_exp_group == "T1" ~ "olivedrab4",
+    meth_exp_group == "T2" ~ "darkgreen"
+  ))
+col_labels <- col_labels_df$color
+
+pdf("data/figures/Heatmap_samples_DMG.pdf")
+heatmap_df<-
+  heatmap.2(All_mat,
           cexCol = 1.5, 
           distfun = function(x) as.dist(1 - cor(t(x), use = "pa")), 
           hclustfun = function(x) hclust(x,method = 'average'),
@@ -154,155 +190,76 @@ heatmap.2(All_mat,
   Colv=TRUE, 
   col= rev(RColorBrewer::brewer.pal(name = "RdYlBu", n = 10)), 
   density.info = "none", 
-  #ColSideColors=col_labels,
-  #colCol = col_labels,
+  ColSideColors=col_labels,
+  dendrogram = "column",
   trace = "none", 
   scale = "row", 
   labRow = FALSE,
   labCol = FALSE,
   sepcolor="none",
   sepwidth=c(0.1,0.01),
-  lmat = rbind(c(0,3),c(2,1),c(4,0)), keysize=1, key.par = list(cex=0.65), lhei=c(1.5,4,1), lwid = c(1.5,4))
+  #lmat = rbind(4:3, 2:1),
+    ### 5 = legend, 4 = col dend, 3 = row dend, 2 = heatmap, 1 = labels
+  #lmat = rbind(c(4,3), c(0,1), c(2,1)),
+  lmat = rbind(c(5,4), c(0,1), c(3,2)),
+  keysize=0.1, 
+  key.par = list(mgp = c(1.5, 0.5, 0), cex=0.7), 
+  lhei=c(0.5,0.1,2),
+  lwid = c(1.5,4))
 dev.off()
-```
 
-```{r}
+## extracting data from heatmapdf
 zscore_df <- as.data.frame(heatmap_df$carpet) ##carpet score is the zscore that goes into the heatmap
-## but the above df is not ordered by dendrogram like the heatmap is
-
-##sample order of heatmap 
-colInd_df <- as.data.frame(heatmap_df$colInd)
-sample_order <- All_data %>% select(-gene) %>%
-  gather(., "Sample.ID", "value", 1:51) %>% select(-value) %>% distinct()
-sample_order$`heatmap_df$colInd` <- c(1:51)
-colInd_df <- left_join(colInd_df, sample_order, by="heatmap_df$colInd") 
-sample_ploidyinfo <- gene.stats %>% select(Sample.ID, meth_exp_group) %>% distinct()
-sample_ploidyinfo$Sample.ID <- as.character(sample_ploidyinfo$Sample.ID)
-colInd_df <- left_join(colInd_df, sample_ploidyinfo, by = "Sample.ID")
-
-# saving gene row ids to match to name and z score above 
-rowInd_df <- as.data.frame(heatmap_df$rowInd)
-rowInd_df$gene <- c(1:1447)
-rowInd_df$gene <- paste0("V", rowInd_df$gene)
-
-## testing z score output to double check order of the gene names above 
-## number below is the first row under rowInd above
-test <- All_data[1145,] 
-test <- test %>% gather("Sample.ID", "value", 2:4) %>% na.omit() ##2:4 for meth_exp_group
-test <- test %>% mutate(mean = mean(value),
-                        stdev = sd(value),
-                        zscore = (value-mean)/stdev)
-## confirmed that V1 is the first row of rowInd_df which is row 642 in All_data  
-## next steps is to bind rowInd_df with the row id and then the gene name from All_data
-All_data_gene_names <- All_data 
-All_data_gene_names$rowInd <- c(1:1447)
-#All_data_gene_names$rowInd <- as.character(All_data_gene_names$rowInd)
-
-zscore_modified <- zscore_df %>% 
-  rownames_to_column(., var = "meth_exp_group") %>% na.omit() %>%
-  gather("gene", "zscore", 2:1448) %>%
-  left_join(., rowInd_df, by = "gene") %>%
-  dplyr::rename(., rowInd = `heatmap_df$rowInd`) %>%
-  left_join(., All_data_gene_names, by = ("rowInd")) %>% #select(-c(6:58)) %>%
-  dplyr::rename(., gene_number = gene.x) %>%
-  dplyr::rename(., gene = gene.y) %>% #left_join(., ploidyinfo, by=c("Sample.ID")) %>%
-  # mutate(meth_exp_group = case_when(
-  #   group == "Group1" ~ "T1",
-  #   group == "Group2" ~ "T1",
-  #   group == "Group3" ~ "T2",
-  #   group == "Group4" ~ "T2",
-  #   group == "Group5" ~ "D",
-  #   group == "Group6" ~ "D"
-  # )) %>%
-  dplyr::rename(meth_D = D) %>%
-  dplyr::rename(meth_T1 = T1) %>%
-  dplyr::rename(meth_T2 = T2) %>%
-  spread(meth_exp_group, zscore)
-zscore_modified$rowInd <- as.character(zscore_modified$rowInd)
-## now I can subset to the conditions I want 
-
-# Genes that are hypermethylated in Triploidy 2 (and not in Triploidy 1 or Diploidy) = 122 genes
-hypermeth_trip2 <- zscore_modified %>% filter(T2 > 1) 
-# Genes that are hypermethylated in Triploidy 1 (and not in Triploidy 2 or Diploidy)  = 138 genes
-hypermeth_trip1 <- zscore_modified %>% filter(T1 > 1) 
-# Genes that are hypermethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 460 genes
-hypermeth_dip <- zscore_modified %>% filter(D > 1) 
-
-hypermeth_trip2 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
-hypermeth_trip1 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
-hypermeth_dip %>% write.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
-
-hypermeth_trip2 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
-hypermeth_trip1 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
-hypermeth_dip <- read.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
+save(zscore_df, file = "data/WGBS/zscore.RData")
 ```
 
-Plotting the hypermeth levels above 
+## Principal Components Analysis & PERMANOVA 
 
-```{r}
-#hypermeth_trip2_plot <- hypermeth_trip2 %>% 
-#hypermeth_trip1_plot <- hypermeth_trip1 %>% 
-hypermeth_dip_plot <- hypermeth_dip %>% 
-  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
-  gather("meth_exp_group", "per.meth", 2:4) %>%
-    # mutate(loci_status = case_when(
-    #       per.meth <= 10 ~ "unmethylated",
-    #       per.meth > 10 & per.meth < 50 ~ "sparsely methylated",
-    #       per.meth >= 50 ~ "methylated")) %>%
-  ggplot(., aes(x=meth_exp_group, y=per.meth, color=meth_exp_group)) + theme_bw() + xlab("") +
-  geom_boxplot() + geom_jitter(size=1, alpha=0.3, width=0.2) + 
-  #facet_wrap(~loci_status, scales = "free_y") +
-  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
-  theme(strip.text.x = element_text(size = 10, color = "black", face = "bold"),
-        strip.text.y = element_text(size = 10, color = "black", face = "bold")) +
-  theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
-
-ggsave(filename="data/WGBS/output/figures/hypermeth_dip.jpeg", 
-       plot=hypermeth_dip_plot, dpi=300, width=4, height=3, units="in")
-
-## statistics on the above 
-hypermeth_stats <- hypermeth_trip2 %>% 
-  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
-  gather("meth_exp_group", "per.meth", 2:4)
-
-aov <- aov(per.meth ~ meth_exp_group, data=hypermeth_stats)
-summary(aov)
-TukeyHSD(aov)
-```
-
-
-# Principal Components Analysis & PERMANOVA 
-
-## ALL 
+### ALL 
 
 ## Creating matrix table
 
 ```{r}
-## Create summary means for all genes with at least 5 methylated positions
-pca.means.df <- aggregate(per.meth ~ gene*Sample.ID, data=meth_table5x_filtered, FUN=mean)
-pca.means.df2 <- pca.means.df[pca.means.df$gene %in% DMG_5x_sig$gene,]
+## Create summary means for loci > 10% median methylation and sigDMG genes 
+pca.means.df <- aggregate(per.meth ~ gene*Sample.ID, data=meth_table5x_filtered2, FUN=mean)
+pca.means.dfsig <- aggregate(per.meth ~ gene*Sample.ID, data=meth_table5x_filtered2_sigDMG, FUN=mean)
 
 # transform df so column names are gene names 
 All_data2 <- pca.means.df %>% 
   pivot_wider(names_from = gene, values_from = per.meth) %>%
   na.omit()
 
+All_data2sig <- pca.means.dfsig %>% 
+  pivot_wider(names_from = gene, values_from = per.meth) %>%
+  na.omit()
+
 rownames(All_data2) <- paste0(All_data2$Sample.ID)
+rownames(All_data2sig) <- paste0(All_data2sig$Sample.ID)
 ```
 
 ## Running prcomp function 
 
 ```{r}
 scaled_pca_all <-prcomp(All_data2[c(2:ncol(All_data2))], scale=FALSE, center=TRUE)
+scaled_pca_sig <-prcomp(All_data2sig[c(2:ncol(All_data2sig))], scale=FALSE, center=TRUE)
+
 fviz_eig(scaled_pca_all)
+fviz_eig(scaled_pca_sig)
 
 coral_info <- All_data2[c(1)]
+coral_infosig <- All_data2sig[c(1)]
 
 pca_data_all <- scaled_pca_all%>%
   broom::augment(coral_info)%>%
   group_by(Sample.ID)%>%
   mutate(PC1.mean = mean(.fittedPC1),
-         PC2.mean = mean(.fittedPC2))
+         PC2.mean = mean(.fittedPC2)) %>% ungroup()
+
+pca_data_sig <- scaled_pca_sig%>%
+  broom::augment(coral_infosig)%>%
+  group_by(Sample.ID)%>%
+  mutate(PC1.mean = mean(.fittedPC1),
+         PC2.mean = mean(.fittedPC2)) %>% ungroup()
 ```
 
 ## Examine PERMANOVA results.
@@ -310,111 +267,102 @@ pca_data_all <- scaled_pca_all%>%
 ```{r}
 # scale data
 vegan_all <- scale(All_data2[c(2:ncol(All_data2))])
+vegan_sig <- scale(All_data2sig[c(2:ncol(All_data2sig))])
+
+## adding metadata 
+pca_data_all <- pca_data_all %>% left_join(., meta, by = "Sample.ID")
+pca_data_sig <- pca_data_sig %>% left_join(., meta, by = "Sample.ID")
 
 # PERMANOVA 
-permanova_all <- adonis2(vegan_all ~ group*ploidy, 
+permanova_all <- adonis2(vegan_all ~ ploidy, 
                          data = pca_data_all, method='eu', permutations = 9999)
-capture.output(permanova_all, file = "data/WGBS/output/statistics/ploidy_PERMANOVA_all.txt")
+capture.output(permanova_all, file = "data/statistics/PERMANOVA_filtered2.txt")
+
+permanova_sig <- adonis2(vegan_sig ~ ploidy, 
+                         data = pca_data_sig, method='eu', permutations = 9999)
+capture.output(permanova_sig, file = "data/statistics/PERMANOVA_filtered2_sigDMG.txt")
 ```
 
 ## Assemble plot with background points
 
 ```{r}
 #adding percentages on axis
+names(pca_data_sig)[3] <- "PCA1"
+names(pca_data_sig)[4] <- "PCA2"
+names(pca_data_sig)[5] <- "PCA3"
+names(pca_data_sig)[6] <- "PCA4"
+percentage_sig <- round((scaled_pca_sig$sdev^2) / sum((scaled_pca_sig$sdev^2)) * 100, 2)
+percentage_sig <- paste(colnames(pca_data_sig[3:55]), "(",paste(as.character(pca_data_sig), "%", ")", sep="") )
+
+## adding treatment column to visualize 
+pca_data_sig$Sample.ID <- as.character(pca_data_sig$Sample.ID)
+pca_data_sig <- pca_data_sig %>% left_join(., meth_group_list, by = "Sample.ID")
+
+#adding percentages on axis
 names(pca_data_all)[3] <- "PCA1"
 names(pca_data_all)[4] <- "PCA2"
 names(pca_data_all)[5] <- "PCA3"
 names(pca_data_all)[6] <- "PCA4"
 percentage_all <- round((scaled_pca_all$sdev^2) / sum((scaled_pca_all$sdev^2)) * 100, 2)
-percentage_all <- paste(colnames(pca_data_all[3:55]), "(",paste(as.character(percentage_all), "%", ")", sep="") )
+percentage_all <- paste(colnames(pca_data_all[3:55]), "(",paste(as.character(pca_data_all), "%", ")", sep="") )
 
 ## adding treatment column to visualize 
 pca_data_all$Sample.ID <- as.character(pca_data_all$Sample.ID)
-pca_data_all <- left_join(pca_data_all, ploidyinfo, by = c("Sample.ID")) %>%
-  left_join(., meta, by = c("Sample.ID", "ploidy", "group", "treesplit", "Clade")) %>%
-  #subset(!group == "Group7" & !group == "Ungroup") %>%
-  mutate(meth_exp_group = case_when(
-    group == "Group1" ~ "T1",
-    group == "Group2" ~ "T1",
-    group == "Group3" ~ "T2",
-    group == "Group4" ~ "T2",
-    group == "Group5" ~ "D",
-    group == "Group6" ~ "D",
-    group == "Group7" ~ "ungroup",
-    group == "Ungroup" ~ "ungroup"
-  ))
-
-PCA_plot <- ggplot(pca_data_all, aes(PCA1, PCA2, color=meth_exp_group)) + #, label=Sample.ID
-  geom_point(size = 4, aes(shape = ploidy)) +
-  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen", "pink3")) + #;  "darkgreen"
-  #scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) +
-  scale_shape_manual(values=c(21, 17)) +
-  theme_classic()+
-  #geom_label() +
-  ylab(percentage_all[2])+
-  xlab(percentage_all[1])+
-  #labs(color = "Group", shape = "Ploidy") + 
-  #labs(color = "Treatment", shape = "Timepoint") +
-  theme(legend.text = element_text(size=18), 
-        legend.position="right",
-        plot.background = element_blank(),
-        legend.title = element_text(size=20), 
-        plot.margin = margin(1, 1, 1, 1, "cm"),
-        axis.text = element_text(size=18), 
-        title = element_text(size=25, face="bold"), 
-        axis.title = element_text(size=18))
-
-ggsave(filename="data/WGBS/output/figures/PCA_all_group_PerMeth.jpeg", plot=PCA_plot, dpi=300, width=9, height=7.5, units="in")
+pca_data_all <- pca_data_all %>% left_join(., meth_group_list, by = "Sample.ID")
 ```
 
-Plot meth percent for Figure 2. 
+Plotting by ploidy 
 
 ```{r}
-## make sure above pca.means.df is run only for the entire dataset not the significant genes 
-#pca.means.df.env <- aggregate(per.meth ~ Sample.ID, data=pca.means.df, FUN=mean)
-pca.means.df.env <- summarySE(pca.means.df, measurevar = c("per.meth"), groupvars = c("Sample.ID"))
-pca.means.df.env$Sample.ID <- as.character(pca.means.df.env$Sample.ID)
-pca.means.df.env <- left_join(pca.means.df.env, meta, by = c("Sample.ID"))
-
-pca.means.df.env.plot <- pca.means.df.env %>%
-  filter(!is.na(ploidy)) %>%
-  ggplot(., aes(x=Timepoint, y=per.meth, color=Treatment, shape=ploidy)) + #, label=Sample.ID
-  geom_jitter(size=2.5, width=0.3) + scale_shape_manual(values=c(21, 17)) + #geom_label() +
-  ylab("CpG % methylation") +
-  # geom_errorbar(aes(ymin=per.meth-se, ymax=per.meth+se), 
-  #               linewidth=0.5, width=.075, position=position_dodge(),
-  #               linetype = "dotted") +
-  theme_bw() + scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) 
-## 1225 pink top; 2197 blue top 
-
-ggsave(filename="data/WGBS/output/figures/env_permeth_all.jpeg", plot=pca.means.df.env.plot, dpi=300, width=6, height=5, units="in")
-
-pca.means.df.env2 <- left_join(pca.means.df, meta, by=c("Sample.ID"))
-pca.means.df.env2 <- summarySE(pca.means.df.env2, measurevar = c("per.meth"), groupvars = c("Treatment", "Timepoint"))
-
-pca.means.df.env.plot2 <- pca.means.df.env2 %>%
-  filter(!is.na(Treatment)) %>%
-  ggplot(., aes(x=Timepoint, y=per.meth, color=Treatment, group=Treatment)) + 
-  geom_point(size=2.5) + geom_line() +
-  ylab("CpG % methylation") +
-  geom_errorbar(aes(ymin=per.meth-se, ymax=per.meth+se),linewidth=0.5, width=.075) +
-  theme_bw() + scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) 
-
-ggsave(filename="data/WGBS/output/figures/env_permeth_all2.jpeg", plot=pca.means.df.env.plot2, dpi=300, width=6, height=5, units="in")
-
-stats3 <- lm(per.meth ~ Timepoint*Temperature*CO2, 
-               na.action=na.omit, data=pca.means.df.env)
-
-qqPlot(residuals(stats3)) 
-hist(residuals(stats3))
-
-t1 <- aov(per.meth ~ Timepoint*Temperature*CO2, 
-               na.action=na.omit, data=pca.means.df.env)
-
-stats3.anova <- Anova(stats3, ddf="lme4", type='III')
-
-library(multcomp)
-emmeans(stats3, pairwise ~ Timepoint*Temperature*CO2)
+ploidy_pca <- ggplot(pca_data_all, aes(PCA1, PCA2, color=meth_exp_group)) + #, label=Sample.ID
+  geom_point(size = 4, aes(shape = ploidy)) +
+  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
+  theme_bw()+
+  scale_shape_manual(values=c(21, 17)) +
+  ylab(percentage_all[2])+
+  xlab(percentage_all[1])+
+  labs(color = "Group", shape = "Ploidy") +
+  theme(legend.text = element_text(size=12), 
+        legend.position="right",
+        plot.background = element_blank(),
+        legend.title = element_text(size=12), 
+        plot.margin = margin(1, 1, 1, 1, "cm"),
+        axis.text = element_text(size=12),
+        axis.title.x = element_text(margin = margin(t=10,r=0,b=0,l=0), size=12, face="bold"),
+        axis.title.y = element_text(margin = margin(t=0,r=5,b=0,l=0), size=12, face="bold"))
 ```
 
+Plot by environmental 
 
+```{r}
+treatment_pca <- ggplot(pca_data_all, aes(PCA1, PCA2, color=Treatment)) + 
+  geom_point(size = 4, aes(shape = Timepoint)) +
+  scale_colour_manual(values = c("blue", "lightblue", "salmon", "red3")) +
+  theme_bw()+
+  ylab(percentage_all[2])+
+  xlab(percentage_all[1])+
+  labs(color = "Treatment", shape = "Timepoint") +
+  theme(legend.text = element_text(size=12), 
+        legend.position="right",
+        plot.background = element_blank(),
+        legend.title = element_text(size=12), 
+        plot.margin = margin(1, 1, 1, 1, "cm"),
+        axis.text = element_text(size=12),
+        axis.title.x = element_text(margin = margin(t=10,r=0,b=0,l=0), size=12, face="bold"),
+        axis.title.y = element_text(margin = margin(t=0,r=10,b=0,l=0), size=12, face="bold"))
+```
+
+Plotting altogether for Figure 2
+
+```{r}
+fig2_plots <- plot_grid(treatment_pca, ploidy_pca, fig2C,
+          labels=c("A)", "B)", "C)"), 
+          nrow=3, ncol=1,
+          align="v", 
+          axis=c("lrtb"),
+          rel_widths = c(2, 2, 2),
+          rel_heights = c(2,2,1.7),
+          label_size = 18)
+
+ggsave("data/figures/Fig2.jpeg", fig2_plots, width = 5, height = 10)
+```
